--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -10,10 +10,11 @@
 <body>
 {% for post in posts %}
     <div>
-
+        <div class="container">
         <h1><a href="">{{ post.title }}</a></h1>
         <p>published: {{ post.published_date }}</p>
         <p>{{ post.text }}</p>
+        </div>
     </div>
 {% endfor %}
 </body>
