--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -11,7 +11,8 @@
 {% for post in posts %}
     <div>
         <div class="container">
-        <h1><a href="">{{ post.title }}</a></h1>
+            <h1>Блог Клинова Михаила Сергеевича</h1>
+        <h2><a href="">{{ post.title }}</a></h2>
         <p>published: {{ post.published_date }}</p>
         <p>{{ post.text }}</p>
         </div>
