--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -12,7 +12,7 @@
     <h1>Блог Клинова Михаила Сергеевича</h1>
     {% for post in posts %}
         <div class="list-post">
-            <div class="post">
+            <div class="post panel panel-default">
                 <h2><a href="">{{ post.title }}</a></h2>
                 <p>published: {{ post.published_date }}</p>
                 <p>{{ post.text }}</p>
