--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -2,10 +2,14 @@
 
 {% block content %}
     <div class="list-post">
-        <div class="post panel panel-default">
-            <h2><a href="">{{ post.title }}</a></h2>
-            <p>published: {{ post.published_date }}</p>
-            <p>{{ post.text|linebreaksbr }}</p>
-        </div>
+        {% for post in posts %}
+            <a href="{% url 'post_detail' pk=post.pk %}">
+                <div class="post panel">
+                    <h2>{{ post.title }}</h2>
+                    <p>published: {{ post.published_date }}</p>
+                    <p>{{ post.text|linebreaksbr }}</p>
+                </div>
+            </a>
+        {% endfor %}
     </div>
 {% endblock content %}
