--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,6 +1,9 @@
 {% extends 'blog/base.html' %}
 
 {% block content %}
+    <nav>
+        <a href="{% url 'post_edit' pk=post.pk %}" class="btn_post">Edit</a>
+    </nav>
     <div class="post panel">
         {% if post.published_date %}
             <div class="date">
