--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -2,6 +2,10 @@
 
 {% block content %}
     <div class="list-post">
+        <nav>
+            <a href="{% url 'blog.views.post_new' %}" class="btn_post"><span class="glyphicon glyphicon-plus"></span>Добавить
+                запись</a>
+        </nav>
         {% for post in posts %}
             <a href="{% url 'post_detail' pk=post.pk %}">
                 <div class="post panel">
