--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -4,7 +4,7 @@
     {% if user.is_authenticated %}
         <nav>
             <a href="{% url 'post_edit' pk=post.pk %}" class="btn_post">
-                Редактировать
+                Внести коррективы
             </a>
         </nav>
     {% endif %}
@@ -17,4 +17,23 @@
         <h1>{{ post.title }}</h1>
         <p>{{ post.text|linebreaksbr }}</p>
     </div>
+    {% for comment in post.comments.all %}
+        {% if user.is_authenticated or comment.approved_comment %}
+            <div class="comment">
+                <div class="date">
+                    {{ comment.created_date }}
+                    {% if not comment.approved_comment %}
+                        <a class="btn btn-default" href="{% url 'comment_remove' pk=comment.pk %}"><span
+                                class="glyphicon glyphicon-remove"></span>Расстрелять</a>
+                        <a class="btn btn-default" href="{% url 'comment_approve' pk=comment.pk %}"><span
+                                class="glyphicon glyphicon-ok"></span>Принять к исполнению</a>
+                    {% endif %}
+                </div>
+                <strong>{{ comment.author }}</strong>
+                <p>{{ comment.text|linebreaks }}</p>
+            </div>
+        {% endif %}
+    {% empty %}
+        <p>Высказываний общественности нет</p>
+    {% endfor %}
 {% endblock %}
