--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -5,7 +5,7 @@
         <nav>
             <a href="{% url 'blog.views.post_new' %}" class="btn_post">
                 <span class="glyphicon glyphicon-plus"></span>
-                Добавить запись
+                Рассказать историю
             </a>
         </nav>
     {% endif %}
@@ -17,6 +17,11 @@
                     <p>published: {{ post.published_date }}</p>
                     <p>{{ post.text|linebreaksbr }}</p>
                 </div>
+            </a>
+            if {{ post.post.approved_comments.count }}>0
+            <a href="{% url 'post_detail' pk=post.pk %}">Комментариев к записи: {{ post.post.approved_comments.count }}</a><br>
+            <a class="btn btn-default btn-comment" href="{% url 'add_comment_to_post' pk=post.pk %}">
+                Высказаться
             </a>
         {% endfor %}
     </div>
