--- a/blog/templates/blog/add_comment.html
+++ b/blog/templates/blog/add_comment.html
@@ -1,7 +1,7 @@
 {% extends 'blog/base.html' %}
 
 {% block content %}
-    <h1>Просмотреть высказывания в свой адрес</h1>
+    <h1>Раскритиковать партийное руководство</h1>
     <form method="POST" class="post-form">{% csrf_token %}
         {{ form.as_p }}
         <button type="submit" class="save btn btn-default">Готов к ссылке</button>
