--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <div class="container">
-    <a href="/"><h1>Блог</h1></a>
+    <a href="/"><h1>Блог Клинова Михаила Сергеевича</h1></a>
     {% block content %}
     {% endblock %}
 </div>
