--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -18,8 +18,11 @@
                     <p>{{ post.text|linebreaksbr }}</p>
                 </div>
             </a>
-            <a href="{% url 'post_detail' pk=post.pk %}" class="descriptor-count">Высказалось {{ post.approved_comments.count }} человек</a><br>
-            <a class="btn btn-default btn-comment" href="{% url 'add_comment_to_post' pk=post.pk %}">
+            <a href="{% url 'post_detail' pk=post.pk %}" class="descriptor-count">Высказалось {{ post.approved_comments.count }} человек</a>
+                {% if user.is_authenticated %}
+                   ( {{ post.comments.count }})
+                {% endif %}
+            <br><a class="btn btn-default btn-comment" href="{% url 'add_comment_to_post' pk=post.pk %}">
                 Высказаться
             </a>
         {% endfor %}
