--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -33,6 +33,8 @@
                 <p>{{ comment.text|linebreaks }}</p>
             </div>
         {% endif %}
-    {% endfor %}
+    {% empty %}
         <p>Высказываний общественности нет</p>
+    {% endfor %}
+
 {% endblock  %}
