--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -26,7 +26,7 @@
                         <a class="btn btn-default" href="{% url 'comment_remove' pk=comment.pk %}"><span
                                 class="glyphicon glyphicon-remove"></span>Высмеивание партийного руководства</a>
                         <a class="btn btn-default" href="{% url 'comment_approve' pk=comment.pk %}"><span
-                                class="glyphicon glyphicon-ok"></span>Принять к исполнению</a>
+                                class="glyphicon glyphicon-ok"></span>Предать гласности</a>
                     {% endif %}
                 </div>
                 <strong>{{ comment.author }}</strong>
