--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -20,11 +20,12 @@
             </a>
             <a href="{% url 'post_detail' pk=post.pk %}" class="descriptor-count">Высказалось {{ post.approved_comments.count }} человек</a>
                 {% if user.is_authenticated %}
-                   ({{ post.comments.count }})
+                   ({{ post.comments.count }} без учета модерации)
                 {% endif %}
             <br><a class="btn btn-default btn-comment" href="{% url 'add_comment_to_post' pk=post.pk %}">
                 Высказаться
             </a>
+            Внимание! Все комментарии проходят проверку у администратора
         {% endfor %}
     </div>
 {% endblock content %}
