--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,4 +1,5 @@
 {% extends 'blog/base.html' %}
+{% load mathfilters %}
 
 {% block content %}
     {% if user.is_authenticated %}
@@ -20,12 +21,12 @@
             </a>
             <a href="{% url 'post_detail' pk=post.pk %}" class="descriptor-count">Высказалось {{ post.approved_comments.count }} человек</a>
                 {% if user.is_authenticated %}
-                   ({{ post.comments.count }} без учета модерации)
+                   ({{ post.comments.count|sub:post.approved_comments.count }} без учета модерации)
                 {% endif %}
             <br><a class="btn btn-default btn-comment" href="{% url 'add_comment_to_post' pk=post.pk %}">
                 Высказаться
             </a>
-            Внимание! Все комментарии проходят проверку у администратора
+            Внимание! Все комментарии проходят проверку у в ЦК
         {% endfor %}
     </div>
 {% endblock content %}
