--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -21,7 +21,7 @@
             </a>
             <a href="{% url 'post_detail' pk=post.pk %}" class="descriptor-count">Высказалось {{ post.approved_comments.count }} человек</a>
                 {% if user.is_authenticated %}
-                   ({{ post.comments.count|sub:post.approved_comments.count }} без учета модерации)
+                   ({{ post.comments.count|sub:post.approved_comments.count }} ожидают модерации)
                 {% endif %}
             <br><a class="btn btn-default btn-comment" href="{% url 'add_comment_to_post' pk=post.pk %}">
                 Высказаться
