--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -3,10 +3,16 @@
 <html>
 <head>
     <title>Main blog</title>
+    <meta property="og:title" content="Я – лицензионный Дракон!"/>
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
     <link href="https://fonts.googleapis.com/css?family=Lobster&subset=latin,cyrillic" rel="stylesheet" type="text/css">
+    <script src="//yastatic.net/es5-shims/0.0.2/es5-shims.min.js"></script>
+    <script src="{% static 'js/share.js' %}"></script>
     <link rel="stylesheet" href="{% static 'css/blog.css' %}">
+
+{#    <meta property="og:image" content="http://allsoft.ru/bitrix/templates/allsoft2011/images/8let/dragon_normal.jpg"/>#}
+
 </head>
 <body>
 <div class="container">
