--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -16,10 +16,8 @@
                 <div class="post panel">
                     <h2>{{ post.title }}</h2>
                     <p>Тайна выдана: {{ post.published_date }}</p>
-                    <p>{{ post.text|linebreaksbr }}</p>
-
+                    <p>{{ post.text|truncatechars_html:250 }}</p>
                 </div>
-
             </a>
             <a href="{% url 'post_detail' pk=post.pk %}"
                class="descriptor-count">Высказалось {{ post.approved_comments.count }} человек</a>
