--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -19,7 +19,7 @@
             </div>
         {% endif %}
         <h1>{{ post.title }}</h1>
-        <p>{{ post.text|linebreaksbr|safe }}</p>
+        <p>{{ post.text|safe }}</p>
     </div>
     <h1>Высказывания общественности по данному поводу</h1>
 
