--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -20,19 +20,24 @@
     {{ settings }}
     <a href="/"><h1>Блог Клинова Михаила Сергеевича</h1></a>
     {% block content %}
+        <!-- Yandex.Metrika informer -->
+        <a href="https://metrika.yandex.ru/stat/?id=41528589&amp;from=informer"
+           target="_blank" rel="nofollow"><img
+                src="https://informer.yandex.ru/informer/41528589/3_1_FFFFFFFF_EFEFEFFF_0_pageviews"
+                style="width:88px; height:31px; border:0;" alt="Яндекс.Метрика"
+                title="Яндекс.Метрика: данные за сегодня (просмотры, визиты и уникальные посетители)"
+                class="ym-advanced-informer" data-cid="41528589" data-lang="ru"/></a>
+        <!-- /Yandex.Metrika informer -->
+
+        <!-- Yandex.Metrika counter -->
+
+        <noscript>
+            <div><img src="https://mc.yandex.ru/watch/41528589" style="position:absolute; left:-9999px;" alt=""/></div>
+        </noscript>
+        <!-- /Yandex.Metrika counter -->
+
     {% endblock %}
 </div>
-
-<!-- Yandex.Metrika informer -->
-<a href="https://metrika.yandex.ru/stat/?id=41528589&amp;from=informer"
-target="_blank" rel="nofollow"><img src="https://informer.yandex.ru/informer/41528589/3_1_FFFFFFFF_EFEFEFFF_0_pageviews"
-style="width:88px; height:31px; border:0;" alt="Яндекс.Метрика" title="Яндекс.Метрика: данные за сегодня (просмотры, визиты и уникальные посетители)" class="ym-advanced-informer" data-cid="41528589" data-lang="ru" /></a>
-<!-- /Yandex.Metrika informer -->
-
-<!-- Yandex.Metrika counter -->
-
-<noscript><div><img src="https://mc.yandex.ru/watch/41528589" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
-<!-- /Yandex.Metrika counter -->
 
 </body>
 </html>
