--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -32,7 +32,7 @@
         <!-- Yandex.Metrika counter -->
 
         <noscript>
-            <div><img src="https://mc.yandex.ru/watch/41528589" style="position:absolute; left:-9999px;" alt=""/></div>
+            <div><img src="https://mc.yandex.ru/watch/41528589" alt=""/></div>
         </noscript>
         <!-- /Yandex.Metrika counter -->
 
