--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -27,14 +27,8 @@
                 style="width:88px; height:31px; border:0;" alt="Яндекс.Метрика"
                 title="Яндекс.Метрика: данные за сегодня (просмотры, визиты и уникальные посетители)"
                 class="ym-advanced-informer" data-cid="41528589" data-lang="ru"/></a>
-        <!-- /Yandex.Metrika informer -->
-
-        <!-- Yandex.Metrika counter -->
-
-        <noscript>
-            <div><img src="https://mc.yandex.ru/watch/41528589" alt=""/></div>
-        </noscript>
-        <!-- /Yandex.Metrika counter -->
+        div>
+        <img src="https://mc.yandex.ru/watch/41528589" alt=""/></div>
 
     {% endblock %}
 </div>
