--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -10,44 +10,61 @@ h2, h1 {
     padding: 15px;
     text-decoration: none;
 }
+
 h1 {
     font-family: 'Lobster';
 }
 
-a:hover{
+a:hover {
     text-decoration: none;
 }
-nav{
+
+nav {
     margin: 25px 0;
 
 }
+
 .btn_post {
     padding: 20px;
     background: #cce448;
     border-radius: 10px;
     text-decoration: none;
 }
-.post-form textarea{
+
+.post-form textarea {
     width: 100%;
 }
+
 .post-form textarea, .post-form input {
     border-radius: 5px;
 }
+
 .btn-comment {
     margin: 15px auto;
 }
+
 .descriptor-count {
     color: black;
 }
+
 .detail_comment {
     background: gainsboro;
 }
+
 .glyphicon:after {
     margin-right: 10px;
 }
+
 .ya-share2 {
     margin-bottom: 15px;
 }
+
 p {
     word-wrap: break-word;
+}
+
+.footer {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
 }
