--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -15,9 +15,13 @@
         {% for post in posts %}
             <a href="{% url 'post_detail' pk=post.pk %}">
                 <div class="post panel">
-                    <h2>{{ post.title }}</h2>
-                    <p>Тайна выдана: {{ post.published_date }}</p>
-                    <p>{{ post.text|truncatechars_html:250|safe }}</p>
+                    <div class="panel-body"><h2>{{ post.title }}</h2>
+                        <p>Тайна выдана: {{ post.published_date }}</p>
+                    </div>
+                    <div class="panel-footer">
+                        Краткие сведения:
+                        <p>{{ post.text|truncatechars_html:250|safe }}</p>
+                    </div>
                 </div>
             </a>
             <a href="{% url 'post_detail' pk=post.pk %}"
