--- a/blog/templates/blog/footer.html
+++ b/blog/templates/blog/footer.html
@@ -1,9 +1,11 @@
-<div class="footer">
-    Тольятти, {% now "Y" %}
-    <a href="https://metrika.yandex.ru/stat/?id=41528589&amp;from=informer" target="_blank" rel="nofollow">
-        <img src="https://informer.yandex.ru/informer/41528589/2_0_FFFFFFFF_EFEFEFFF_0_pageviews"
-             style="width:80px; height:31px; border:0;" alt="Яндекс.Метрика"
-             title="Яндекс.Метрика: данные за сегодня (просмотры)" class="ym-advanced-informer" data-cid="41528589"
-             data-lang="ru"/>
-    </a>
+<div class="block-footer">
+    <div class="footer">
+        Тольятти, {% now "Y" %}
+        <a href="https://metrika.yandex.ru/stat/?id=41528589&amp;from=informer" target="_blank" rel="nofollow">
+            <img src="https://informer.yandex.ru/informer/41528589/2_0_FFFFFFFF_EFEFEFFF_0_pageviews"
+                 style="width:80px; height:31px; border:0;" alt="Яндекс.Метрика"
+                 title="Яндекс.Метрика: данные за сегодня (просмотры)" class="ym-advanced-informer" data-cid="41528589"
+                 data-lang="ru"/>
+        </a>
+    </div>
 </div>
