--- a/static/css/blog.css
+++ b/static/css/blog.css
@@ -67,4 +67,7 @@ p {
     display: flex;
     flex-direction: column;
     text-align: center;
+    clear: both;
+    position: absolute;
+    bottom: 0;
 }
