add ckeditor for suit

--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -25,11 +25,11 @@
 
 
 
-    <title>{{ settings_page.name_website }}</title>
+    <title>{{ settings_page }}</title>
 </head>
 <body>
 <div class="container">
-    {{ settings }}
+    {{ settings_page }}
 <div class="alert alert-danger">
     <strong>Внимание! Сайт находится в стадии разработки!</strong>
     <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
