--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -35,7 +35,7 @@
     <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
 </div>
 <div class="alert alert-warning">
-    <strong>Внимание! Сайт носит развлекательный характер!</strong>
+    <strong>Внимание! Сайт носит информативно - развлекательный характер!</strong>
     <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
 </div>
 
