--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -76,7 +76,7 @@ p {
 .block-footer {
     display: flex;
     justify-content: center;
-    position: absolute;
+    position: relative;
     bottom: 0;
     text-align: center;
     width: 100%;
