--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -76,9 +76,12 @@ p {
 .block-footer {
     display: flex;
     justify-content: center;
-    position: relative;
     bottom: 0;
+    align-items: baseline;
     text-align: center;
     width: 100%;
     background: #333;
+    clear: both;
+    position: fixed;
+    margin-top: auto;
 }
