--- a/blog/templates/blog/footer.html
+++ b/blog/templates/blog/footer.html
@@ -1,6 +1,6 @@
 <div class="block-footer">
     <div class="footer">
-        <a href="{{ request.META.HTTP_HOST }}">{{ request.META.HTTP_HOST }}</a>, {% now "Y" %}
+        {{ request.META.HTTP_HOST }}, {% now "Y" %}
         <a href="https://metrika.yandex.ru/stat/?id=41528589&amp;from=informer" target="_blank" rel="nofollow">
             <img src="https://informer.yandex.ru/informer/41528589/2_0_FFFFFFFF_EFEFEFFF_0_pageviews"
                  style="width:80px; height:31px; border:0;" alt="Яндекс.Метрика"
