--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -8,6 +8,11 @@
             </a>
         </nav>
     {% endif %}
+    <script>
+        $(document).ready(function () {
+            setTimeout(function(){$('#myModal').modal('show');}, 1000);
+        });
+    </script>
     <div class="post panel">
         <div class="ya-share2"
              data-services="vkontakte,facebook,odnoklassniki,gplus,twitter,viber,whatsapp,skype,telegram"
@@ -49,4 +54,7 @@
     {% empty %}
         <p>Высказываний общественности нет</p>
     {% endfor %}
+
+    <!-- Modal -->
+
 {% endblock %}
